--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>Hello! I'm Fleecks.</b>
+<script language="JavaScript">
+
+var h=(new Date()).getHours();
+
+if (h > 23 || h <7) document.write('Привет совам и лунатикам! :)') ;
+
+if (h > 6 && h < 12) document.write('Доброе утро! Выспался? :)'); 
+
+if (h > 11 && h < 19) document.write('Добрый день!'); 
+
+if (h > 18 && h < 24) document. write('Привет! Уже вечер, кстати... домой не пора?'); 
+
+</script>
